Image overflow correction

--- a/knowledgehub/climate-change/style.css
+++ b/knowledgehub/climate-change/style.css
@@ -94,7 +94,7 @@ main {
 }
 
 .something {
-  width: 80vw;
+  width: 100%;
 }
 
 .box {
